fix gap at top of page

--- a/src/sass/_background.scss
+++ b/src/sass/_background.scss
@@ -1,6 +1,7 @@
 .background {
   position: relative;
   z-index: -1;
+  margin-top: -1rem;
 
   &::before {
     content: "";
